# super_clipboard

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  flake.nix  release.toml  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml
mobile/android/: AndroidManifest.xml  build.gradle  config.gradle  gradle.properties  local.properties
mobile/android/src/com/sergioribera/superclipboard/: MainActivity.kt
mobile/android/src/com/sergioribera/superclipboard/data/: DeviceDao.kt  DeviceDatabase.kt  DeviceRepository.kt  DeviceRespositoryImpl.kt  PreferencesManager.kt
mobile/android/src/com/sergioribera/superclipboard/di/: AppModel.kt
mobile/android/src/com/sergioribera/superclipboard/services/: OnChangeClipboard.kt  UDPService.kt
mobile/android/src/com/sergioribera/superclipboard/ui/: DeviceLinkedEvent.kt  DeviceLinkedViewModel.kt  Notification.kt
mobile/android/src/com/sergioribera/superclipboard/ui/component/: CustomBottomNavigation.kt  DeviceComponent.kt
mobile/android/src/com/sergioribera/superclipboard/ui/icons/: __AppIcons.kt
mobile/android/src/com/sergioribera/superclipboard/ui/icons/appicons/: Android.kt  Apple.kt  Back.kt  Generic.kt  Hint.kt  Light-mode.kt  Linux.kt  Night-mode.kt  Password.kt  Pin.kt  Settings.kt  Trash.kt  Unpin.kt  Windows.kt
mobile/android/src/com/sergioribera/superclipboard/ui/layout/: Devices.kt  NotFound.kt
mobile/android/src/com/sergioribera/superclipboard/ui/screens/: AvailableDevices.kt  LinkedDevices.kt  Router.kt
mobile/android/src/com/sergioribera/superclipboard/ui/theme/: Color.kt  Theme.kt  Type.kt
mobile/android/src/com/sergioribera/superclipboard/uniffi/mdns/: mdns.kt
mobile/android/src/com/sergioribera/superclipboard/util/: UiEvent.kt  Utils.kt
mobile/res/values/: attrs_device_component.xml  strings.xml  styles.xml
mobile/res/values-night/: styles.xml
shared/: Cargo.toml  build.rs  uniffi-bindgen.rs
shared/kotlin/uniffi/mdns/: mdns.kt
shared/src/: lib.rs  mdns.udl
shared/src/clipboard/: model.rs
shared/src/mdns/: model.rs
shared/src/pinned/: data.rs  mod.rs  model.rs
src/: args.rs  daemon.rs  data.rs  gui.rs  keys.rs  main.rs  passwd.rs  settings.rs  update.rs  utils.rs
src/sync/: mdns.rs  mod.rs
src/ui/: device.rs  item.rs  mod.rs  mouse_listener.rs  notify.rs
src/ui/styles/: btn_style.rs  container_style.rs  input_keys.rs  mod.rs  tooltip_style.rs
