[package]
name = "super_clipboard"
authors = ["SergioRibera"]
description = "GUI Application for manage history clipboard; Cli options overwrite settings"
homepage = "https://github.com/SergioRibera/super_clipboard"
license = "MIT"
version = "2.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
opt-level = "z"

[[bin]]
name = "superclipboard"
path = "src/main.rs"

[dependencies]
open = "4.2.0"
log = "0.4.19"
rlsf = "0.2.1"
dark-light = "1.0.0"
abomonation = "0.7.3"
env_logger = "0.10.0"
iced_native = "0.10.3"
device_query = "1.1.3"
display-info = "0.4.2"
arboard = { version = "3.2", features = ["wayland-data-control"] }
clap = { version = "4.3.8", features = ["derive"] }
iced = { version = "0.9.0", default-features = false, features = [
    "canvas",
    "glow",
    "image",
    "svg",
    # "default_system_font",
    "async-std",
] }
chrono = { version = "0.4.26", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
abomonation_derive = "0.5.0"
app_dirs2 = "2.5.5"
global-hotkey = "0.2.2"
rand = "0.8.5"
